[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "regridding"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "Numba-accelerated interpolation routines"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "numba",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "scipy",
]
doc = [
    "pytest",
    "matplotlib",
    "graphviz",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme",
    "jupyter-sphinx",
    "sphinx-favicon",
]

[project.urls]
Homepage = "https://github.com/byrdie/regridding"
Documentation = "https://regridding.readthedocs.io/en/latest"

[tool.setuptools_scm]
