[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "regridding"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "Numba-accelerated interpolation routines"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "numba",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "scipy",
]
doc = [
    "pytest",
    "scipy",
    "matplotlib",
    "graphviz",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "sphinx-favicon",
]
benchmark = [
    "asv",
]

[project.urls]
Homepage = "https://github.com/sun-data/regridding"
Documentation = "https://regridding.readthedocs.io/en/latest"

[tool.setuptools_scm]

[tool.coverage.run]
omit = [
    "benchmarks/*",
]

[tool.black]
exclude = "_conservative_ramshaw.py"
